<resources>
    <string name="app_name">LSP_Olshop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_produk">Produk</string>
    <string name="menu_tambah">Tambah Produk</string>
    <string name="menu_hapus">Hapus Produk</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Profile</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="produk">Produk</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="hapus_produk">Hapus Produk</string>
    <string name="profil">Profil</string>
</resources>
