<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_produk"
            android:title="@string/menu_produk" />
        <item
            android:id="@+id/nav_tambah"
            android:title="@string/menu_tambah" />
        <item
            android:id="@+id/nav_hapus"
            android:title="@string/menu_hapus" />
        <item
            android:id="@+id/nav_logout"
            android:title="Logout" />

    </group>

    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="@string/menu_share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="@string/menu_send" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>
